[gd_scene load_steps=5 format=3 uid="uid://c4pa507srvrtr"]

[ext_resource type="Script" path="res://Tycoon/Standings/PlayerStanding.gd" id="1_04pjp"]
[ext_resource type="Texture2D" uid="uid://dt6k44odd48y5" path="res://Tycoon/Standings/BlankMask.png" id="2_b2fp0"]
[ext_resource type="Texture2D" uid="uid://cvk2ud5ti3svr" path="res://Tycoon/Standings/BigWinner.png" id="3_s4qvt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2cevh"]
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.133333, 0.133333, 0.164706, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0

[node name="PlayerStandings" type="Panel"]
custom_minimum_size = Vector2(250, 30)
offset_right = 161.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2cevh")
script = ExtResource("1_04pjp")

[node name="Score" type="Label" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "0"
vertical_alignment = 1

[node name="RightsideLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -6

[node name="TextPad" type="Control" parent="RightsideLayout"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="IconBG" type="TextureRect" parent="RightsideLayout"]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_b2fp0")
ignore_texture_size = true
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="RightsideLayout/IconBG"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_s4qvt")
ignore_texture_size = true
stretch_mode = 4

[node name="PlayerName" type="Label" parent="RightsideLayout"]
layout_mode = 2
text = "1. Player 1"
vertical_alignment = 1
